Make Psi4 buildable with Ninja
Ninja is supposed to be faster at compiling than make. CMake supports it
out-of-the-box, it's enough to pass it as generator:
  cmake -H. -Bbuild -GNinja

Modifications needed to get Ninja to work:
- DESTDIR=${CMAKE_BINARY_DIR}/stage was prepended to ${CMAKE_MAKE_PROGRAM} install appearing in all instances of INSTALL_COMMAND

Caveats:
- The official Ninja distribution is not yet capable of handling
Fortran. It is possible to use the Kitware-maintained version of Ninja
for that though https://github.com/Kitware/ninja/releases

--- a/external/upstream/ambit/CMakeLists.txt
+++ b/external/upstream/ambit/CMakeLists.txt
@@ -59,8 +59,7 @@ if(${ENABLE_ambit})
                        -DTargetHDF5_DIR=${STAGED_INSTALL_PREFIX}/share/cmake/TargetHDF5
             CMAKE_CACHE_ARGS -DCMAKE_C_FLAGS:STRING=${CMAKE_C_FLAGS}
                              -DCMAKE_CXX_FLAGS:STRING=${CMAKE_CXX_FLAGS}
-            INSTALL_COMMAND ${CMAKE_MAKE_PROGRAM} install
-            DESTDIR=${CMAKE_BINARY_DIR}/stage)
+            INSTALL_COMMAND DESTDIR=${CMAKE_BINARY_DIR}/stage ${CMAKE_MAKE_PROGRAM} install)
 
         set(ambit_DIR ${STAGED_INSTALL_PREFIX}/share/cmake/ambit CACHE PATH "path to internally built ambitConfig.cmake" FORCE)
     endif()
