--- a/.travis.yml
+++ b/.travis.yml
@@ -141,7 +141,7 @@ install:
 - conda config --set always_yes yes --set changeps1 no
 - conda update -q conda
 - conda info -a
-- conda create -q -n p4env python=$PYTHON_VER numpy cmake ci-psi4-lt psi4-lt-mp dftd3 gcp -c psi4/label/dev -c psi4 -c conda-forge
+- conda create -q -n p4env python=$PYTHON_VER numpy ci-psi4-lt psi4-lt-mp dftd3 gcp -c psi4/label/dev -c psi4 cmake -c conda-forge
 - source activate p4env
 - conda list
 - mkdir -p ninja-1.7.2
