--- a/tests/fcidump/CMakeLists.txt
+++ b/tests/fcidump/CMakeLists.txt
@@ -1,5 +1,7 @@
 include(TestingMacros)
 
 file(COPY Ne.6311G.INTDUMP.ref DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY Ne.C1.6311G.INTDUMP.ref DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 file(COPY Ne.cc-pVDZ.UHF.INTDUMP.ref DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY Ne.C1.cc-pVDZ.UHF.INTDUMP.ref DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 add_regression_test(fcidump "psi;quicktests;smoketests;fcidump")
