Rewrite testing facilities for FCIDUMP
- Remove the write_footer option from the fcidump function.
It would be handy to have a provenance signature, but it might
muck up the parser in programs that use the FCIDUMP format.
- The dumps are loaded in using regexes and numpy now.
It should be more robust with respect to dumps generated with slightly
different header formatting.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -58,8 +58,8 @@ foreach(test_name adc1 adc2 casscf-fzc-sp casscf-semi casscf-sa-sp ao-casscf-sp 
                   dft1-alt dft2 dft3 dft-omega docs-bases docs-dft extern1 extern2
                   fsapt1 fsapt2 fsapt-terms fsapt-allterms isapt1 isapt2
                   fci-dipole fci-h2o fci-h2o-2 fci-h2o-fzcv fci-tdm fci-tdm-2
-                  fci-coverage 
-                  #fcidump
+                  fci-coverage
+                  fcidump
                   fd-freq-energy fd-freq-energy-large fd-freq-gradient
                   fd-freq-gradient-large fd-gradient freq-isotope1 freq-isotope2 fnocc1 fnocc2
                   fnocc3 fnocc4 frac frac-ip-fitting frac-traverse ghosts gibbs matrix1
