--- a/psi4/src/psi4/cc/CMakeLists.txt
+++ b/psi4/src/psi4/cc/CMakeLists.txt
@@ -1,5 +1,28 @@
 add_library(cc STATIC "")
 
+# FIXME Remove once done
+list(APPEND _Clang_debug_flags
+  "-Wall"
+  "-O0"
+  "-g3"
+  "-Wextra"
+  "-Winit-self"
+  "-Woverloaded-virtual"
+  "-Wuninitialized"
+  "-Wmissing-declarations"
+  "-Wwrite-strings"
+  "-Weffc++"
+  "-Wdocumentation"
+  "-Wno-sign-compare"
+  "-m64"
+  "-Qunused-arguments"
+  "-fcolor-diagnostics"
+  )
+target_compile_options(cc
+  PRIVATE
+  $<$<AND:$<CXX_COMPILER_ID:Clang>,$<CONFIG:Debug>>:${_Clang_debug_flags}>
+  )
+
 set_target_properties(cc
   PROPERTIES
     POSITION_INDEPENDENT_CODE 1
