--- a/psi4/src/psi4/cc/cctriples/CMakeLists.txt
+++ b/psi4/src/psi4/cc/cctriples/CMakeLists.txt
@@ -1,2 +1,27 @@
-set(sources_list T3_UHF_ABC.cc triples.cc ET_ABB.cc cache.cc ET_RHF.cc count_ijk.cc T3_grad_UHF_AAA.cc ET_AAB.cc transpose_integrals.cc ET_AAA.cc test_abc_loops.cc T3_grad_UHF_AAB.cc ET_UHF_AAB.cc get_moinfo.cc ET_UHF_AAA.cc ET_UHF_ABB.cc T3_UHF_AAB.cc EaT_RHF.cc ET_BBB.cc ET_UHF_BBB.cc T3_UHF_AAA.cc T3_grad_UHF_BBA.cc T3_grad_UHF_BBB.cc T3_grad_RHF.cc )
-psi4_add_module(bin cctriples sources_list mints)
+target_sources(cc
+  PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/ET_AAA.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/ET_AAB.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/ET_ABB.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/ET_BBB.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/ET_RHF.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/ET_UHF_AAA.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/ET_UHF_AAB.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/ET_UHF_ABB.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/ET_UHF_BBB.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/EaT_RHF.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/T3_UHF_AAA.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/T3_UHF_AAB.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/T3_UHF_ABC.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/T3_grad_RHF.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/T3_grad_UHF_AAA.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/T3_grad_UHF_AAB.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/T3_grad_UHF_BBA.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/T3_grad_UHF_BBB.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/cache.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/count_ijk.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/get_moinfo.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/test_abc_loops.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/transpose_integrals.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/triples.cc
+  )
