Add stub of test for CCWavefunction

--- a/tests/python/CMakeLists.txt
+++ b/tests/python/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory(pubchem)
 add_subdirectory(mints9)
 add_subdirectory(mints2)
 add_subdirectory(cc54)
+add_subdirectory(ccwfn)
 add_subdirectory(3-index-transforms)
 add_subdirectory(vibanalysis)
 add_subdirectory(mints13)
