Initialization of CCWavefunction
- Introduce CCMOInfo, which replaces MOInfo and avoids use
of PSIF_CC_INFO
- Introduce CCParams, which replaces Params

--- a/psi4/src/psi4/cc/CMakeLists.txt
+++ b/psi4/src/psi4/cc/CMakeLists.txt
@@ -1,4 +1,8 @@
-add_library(cc STATIC ccwave.cc)
+add_library(cc STATIC
+  ccwave.cc
+  ccmoinfo.cc
+  ccparams.cc
+  )
 
 # FIXME Remove once done
 list(APPEND _Clang_debug_flags
